--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>aldebaran</title>
+<link rel="stylesheet" href="style.css" />
 <meta charset="utf-8" />
 <script type="module">
   import init from "./app.js";
