Update page title

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>aldebaran</title>
+<title>rust-wasm-opengl</title>
 <link rel="stylesheet" href="style.css" />
 <meta charset="utf-8" />
 <script type="module">
