--- a/public/index.html
+++ b/public/index.html
@@ -4,5 +4,5 @@
 <meta charset="utf-8" />
 <script type="module">
   import init from "./app.js";
-  init().then((wasm) => wasm.main());
+  init("app_bg.wasm").then((wasm) => wasm.main());
 </script>
